Theme file cleanup, take select 2 off mana ge form displays and manage displays

--- a/web/themes/oc_patterns/components/_patterns/00-base/_03-background-sizes.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/_03-background-sizes.scss
@@ -136,7 +136,7 @@ $addtoany: 32px;
 	@include backgroundSize($columns * $addtoany,$rows * $addtoany);
 }
 
-/// used in SITEWIDE GLOBAL-STYLES.SCSS 
+/// used in MISCELLANEOUS GLOBAL-STYLES.SCSS 
 $iconsize: 18px;
 @mixin iconSize{
 	@include backgroundSize($columns * $iconsize,$rows * $iconsize);
