--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/addtoany/_addtoany.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/addtoany/_addtoany.scss
@@ -1,9 +1,7 @@
-/* ============
-    BASE BLOCKS
-================ */
+/* ==================
+   ADDTOANY
+==================== */
 
-/* ADD TO ANY
----------------- */
 .block-addtoany-block{
 	.addtoany_list > a{
 		padding: 0 1px;
