--- a/web/themes/oc_patterns/components/_patterns/style.scss
+++ b/web/themes/oc_patterns/components/_patterns/style.scss
@@ -23,4 +23,4 @@
 @import "02-molecules/**/*.scss";
 @import "03-organisms/**/*.scss";
 @import "04-pages/**/*.scss";
-@import "05-sitewide/**/*.scss";
+@import "05-miscellaneous/**/*.scss";
