--- a/web/themes/oc_patterns/templates/zzz-custom/layout/html.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/layout/html.html.twig
@@ -24,7 +24,7 @@
  */
 #}
 
-{% extends "@sitewide/_html.twig" %}
+{% extends "@miscellaneous/_html.twig" %}
 
 {% block headInsert %}
 	{# placeholder for any site or page specific <head> additions #}
