--- a/web/themes/oc_patterns/templates/zzz-custom/layout/nodes/page--landing-page.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/layout/nodes/page--landing-page.html.twig
@@ -45,7 +45,7 @@
 #}
 
 
-{% extends "@sitewide/_page.twig" %}
+{% extends "@miscellaneous/_page.twig" %}
 
 {# need to bring in a block from pl so can attach basic-page js but want to keep the parent() content from pl #}
 {% block pageHeader %}
