--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -42,13 +42,24 @@ html,code{
 	line-height: 1.4;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	font-kerning: normal;
+	font-synthesis: none; 
 }
 
 body {
 	color: $body;
+	margin: 0;
+}
+
+//clear flaots in common long text fields
+.field.body,.field-oc-long-text{
+	& + *{
+		clear: both;
+	}
 }
 
 p{
+	margin-top: 0;
 	&:not(:last-child){
 		margin-bottom: 1.5em;
 	}
