Readd flexslider because of config fails

--- a/web/themes/oc_patterns/components/_patterns/00-base/_00-breakpoints.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/_00-breakpoints.scss
@@ -2,14 +2,6 @@
 	BREAKPOINTS & GRID VARIABLES
 ======================= */
 
-
-/* SINGULARITY VARIABLES
------------- */
-@include breakpoint-set('to ems', true);
-@include add-grid(12);
-@include add-gutter(1/4);
-
-
 /* BREAKPOINT VARIABLES
 ------------------------ */
 $smallTab: 500px;
@@ -18,9 +10,12 @@ $desk: 900px;
 $maxWidth: 1200px;
 $maxWidthText: 800px;
 $onlyTab: 760px 899px;
-$onlySmall: max-width 759px; 
+$onlySmall: max-width 759px;
+$onlyPhone: max-width 499px; 
 $mobileMenu:max-width 979px;
 $deskMenu:min-width 980px;
+
+
 
 /// mixin - smallTab
 @mixin smallTab {
@@ -62,6 +57,13 @@ $deskMenu:min-width 980px;
 ///mixin - onlySmall
 @mixin onlySmall {
 	@include breakpoint($onlySmall) {
+		@content;
+	}
+}
+
+///mixin - onlyPhone
+@mixin onlyPhone {
+	@include breakpoint($onlyPhone) {
 		@content;
 	}
 }
