--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
@@ -48,7 +48,6 @@
 	DRUPAL: This template is being embedded into multiple Drupal templates. Macros variables can also alter the footer theming/behavior. Avaiable variables: fixed, non-fixed.
 #}
 
-{% import "@base/global/05-macros/macros.twig" as styles %}
 
 <div class="layout-container">
 
@@ -99,7 +98,7 @@
 	{% block pageFooter %}
 		{% if page.footer %}
 			<footer role="contentinfo">
-				<div class="footer-inner {{ styles.fixedFooter }}">
+				<div class="footer-inner">
 					{{ page.footer }}
 				</div>
 			</footer>
