--- a/web/themes/oc_patterns/components/_patterns/01-atoms/07-tables/_tables.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/07-tables/_tables.scss
@@ -15,7 +15,7 @@
 		padding: .25em .5em;
 	}
 	thead th{
-		background: $midGrey;
+		background: $darkGrey;
 		color: $white;
 	}
 
@@ -28,7 +28,7 @@
 			background: $white;
 		}
 		th{
-			background: $midGrey;
+			background: $darkGrey;
 			color: $white;
 		}
 		//give a bit extra room in the row on mobile
