--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-superfish/_superfish.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-superfish/_superfish.scss
@@ -436,14 +436,14 @@ ul.sf-menu.sf-accordion{
 	}
 	.faux-header{
 		padding: 2em 20px;
-		background: $gold; 
+		background: $offWhite; 
 	}
 
 	.sf-dropdown{
 		margin-bottom: 100px;
 		.sf-main{
 			padding: 10px 20px;
-			background: $gold;
+			background: $white;
 			li.sf-depth-1{
 				max-width: 200px;
 				background: $white;
