--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
@@ -223,7 +223,7 @@ a[href$='.ppt'],a[href$=".pptx"]{
 	margin-top: 2em;
 	.tabs {
 		margin: 1em 0;
-		border-bottom:1px solid $midGrey;
+		border-bottom:1px solid $grey;
 
 		ul {
 			padding-left:0;
