--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -1,17 +1,8 @@
 /* base colors */
 $body       : #4d4e4e;
-$lightBlue : #9acde8;
-$blue       : #35729b;
-$midTeal   : #5a8c92;
-$darkBlue  : #064771;
-$orange     : #d38013;
-$gold       : #efb61b;
-$red        : #960430;
 $lightGrey : #ccc;
-$midGrey   : #6a7076;
 $grey       : #ddd;
 $darkGrey  : #222222;
-$warmGrey   : #6f625a;
 $offWhite  : #f6f6f6;
 $white      : #fff;
 $black      : #000;
@@ -39,10 +30,8 @@ $borderRule: #222222;
 
 /* Link COLORS */
 $link        : #d52d00;
-$activeLink : #6a2600;
-$hoverLink  : #6a2600;
-$buttonBack : #efb61b;
-$buttonBackHover: #c84700; 
+$activeLink : #000000;
+$hoverLink  : #676767;
 
 
 /* PL colors */
