Add prefooter region

--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
@@ -95,6 +95,14 @@
 		</main>
 	{% endblock %}
 
+	{% block pagePreFooter %}
+		{% if page.prefooter %}
+			<section role="prefooter" class="prefooter">
+				{{ page.prefooter }}
+			</section>
+		{% endif %}
+	{% endblock %}
+
 	{% block pageFooter %}
 		{% if page.footer %}
 			<footer role="contentinfo">
