Add EU Cookie Compliance

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -1,7 +1,7 @@
 /* base colors */
 $body       : #4d4e4e;
-$lightGrey : #ccc;
-$grey       : #ddd;
+$lightGrey : #ddd;
+$grey       : #ccc;
 $darkGrey  : #222222;
 $offWhite  : #f6f6f6;
 $white      : #fff;
