--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
@@ -20,6 +20,34 @@ body {
 }
 
 
+/* COOKIES ACCEPTANCE
+------------------------ */
+#sliding-popup{
+	.logged-in &{
+		top: 84px !important;
+	}
+	.eu-cookie-compliance-banner{
+		max-width: $maxWidth;
+		@include auto;
+		padding: 20px 40px;
+		background: $grey;
+		border-left: 2px solid $transBlack;
+		border-right: 2px solid $transBlack;
+		border-bottom: 6px solid $transBlack;
+	}
+	.eu-cookie-compliance-buttons{
+		@include safeFlex(column,null,center,null);
+		height: 150px;
+		button{
+			@include buttonWipe;
+			@include button;
+			display: block;
+			width: 150px;
+		}
+	}
+}//end sliding popup
+
+
 /* MAP PINS
 -------------- */
 //google api map pins
