--- a/web/themes/oc_patterns/components/_patterns/00-base/_01-mixins.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/_01-mixins.scss
@@ -392,8 +392,8 @@ $textW: $maxWidthText;
 
 ///mixin - edgeToEdge
 @mixin edgeReset {
-	margin-left:-20px;
-	margin-right:-20px;
+	margin-left: 0;
+	margin-right: 0;
 }
 
 ///mixin - clearfix
