--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
@@ -3,24 +3,26 @@
 ==================== */
 
 .footer-menu{
+	width: 100%;
+	margin-bottom: 1.5em;
+	@include tab{
+		width: 50%;
+		@include safeFlexOrder(2);
+	}
 	h2.block-title{
 		display: none;
 	}
-	width: 100%;
-	@include safeFlexOrder(1);
-	margin-bottom: 1.5em;
-	text-align: center;
-	//change the footer block order at tab and align right
-	@include tab{
-		width: 70%;
-		text-align: right;
-	}
 	ul:not(.contextual-links){
 		@include listReset;
-		@include safeFlex(row,wrap,null,null);
+		@include safeFlex(row,wrap,center,null);
+		@include tab{
+			@include safeFlex(row,wrap,end,null);
+		}
 		li{
+			position: relative;
 			a{
 				font-size: 16px;
+				display: block;
 				&:hover,&:focus{
 					color: $transWhite;
 					@include transAll(.3s);
@@ -30,12 +32,11 @@
 				padding-left: 6px;
 			}
 			&:not(:last-child){
+				padding-right: 8px;
 				&:after{
-					content: '•';
-					padding-left: 8px;
-					color: $transWhite;
+					@include vertRule(right,60%,$white);
 				}
 			}
-		}
+		}//end li
 	}//end ul
 }//end footer-menu
