--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/01-accordion.twig
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/01-accordion.twig
@@ -1,14 +1,13 @@
 {#
-  DRUPAL: This template is embedded into the Drupal accordion-item paragraph template and used in the Pattern Lab accordion group template.
-  Style macros used carry into both places. Available variables: grey, red, black, plus, caret.
+  STYLEGUIDE ONLY: This template is embedded into the Drupal accordion-group paragraph template and used in the Pattern Lab accordion group template.
 #}
 
 {{ accordion_instructions }}
 
-<div class="accordion-item" aria-expanded="false">
-	<a href="#" class="accordion-header">{{ accordion_header }}</a>
-	<div class="field field-oc-long-text">
-		{{ accordion_content|raw }}
+<div class="accordion-item" aria-label="Accordion">
+	<h3 class="accordion-header"><a href="#" role="button" aria-controls="{{ accordion_control }}" aria-expanded="false">{{accordion_header}}</a></h3>
+	<div class="field field-oc-long-text" id="{{ accordion_control }}" aria-hidden="true">
+		{{accordion_content}}
 	</div>
 </div>
 			
