--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_html.twig
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_html.twig
@@ -59,10 +59,10 @@
 	</head>
 	<body {{ attributes.addClass(body_classes) }}>
 		<div class="overflow-guard">
-			<a href="#main-navigation" class="visually-hidden focusable" tabindex="1">
+			<a href="#main-navigation" class="visually-hidden focusable">
 				{{ 'Skip to main navigation'|t }}
 			</a>
-			<a href="#main-content" class="visually-hidden focusable" tabindex="2">
+			<a href="#main-content" class="visually-hidden focusable">
 				{{ 'Skip to main content'|t }}
 			</a>
 			{{ page_top }}
