--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--superfish--main.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--superfish--main.html.twig
@@ -29,6 +29,6 @@
 
 {# replace the dummy pattern lab content with the actual superfish content #}
 {% block superfish_content %}
-	<a id="main-navigation" tabindex="-3"></a>
+	<a id="main-navigation"></a>
 	{{ content }}
 {% endblock %}
