Change to layout builder and upgrade to 8.5.6

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
@@ -22,6 +22,9 @@
 /* ===========
 SECTION LAYOUTS
 ============= */
+.paragraph{
+	width: 100%;
+}
 
 /* WIDGETS FLEX ITEMS
 --------------------- */
