--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
@@ -142,6 +142,17 @@ body {
 }
 
 
+/* LAYOUT BUILDER UI
+-------------------- */
+.layout-section .layout-builder--layout__region{
+	.draggable{
+		*{
+			word-break: break-all;
+		}
+	}
+}//end layout builder section region
+
+
 /* SKIP NAV
 ------------- */
 .overflow-guard > a.focusable{
