--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/paragraph--landing-page-section.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/paragraph--landing-page-section.html.twig
@@ -38,42 +38,24 @@
 #}
 
 
-{# NOTES
-------------
-	This is the parent paragraphs template. Other paragraphs templates can extend this template as needed by
-	inheriting and altering the blocks defined here.
-	Field templates can also overview content set here (example: field--paragraph--field-widget-title.html.twig which sets all titles h2.pane-title)
-#}
-
-
 {# define default paragraphs classes #}
 {%
 set classes = [
 'paragraph',
 'paragraph--type--' ~ paragraph.bundle|clean_class,
-view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
-'paragraphs-item-' ~ paragraph.id.value
+'paragraphs-item-' ~ paragraph.id.value,
+'section-holder'
 ]
 %}
 
 
-<div class="section-item"> 
-	{% block widget %}
-		
-		{# set the default paragraph classes #}
-		<div{{ attributes.addClass(classes)  }}>
-			
-			{# print the content without the styling fields #}
-    		{% block widgetContent %}
-    			{{ content.field_widget_title }}
-    			<div class="wrapper">
-					{# print the content without the styling fields #}
-    				{{ content|without('field_widget_title') }}
-    			</div>
-    		{% endblock %}
-		
-		</div>
-
-	{% endblock %}
+{# set the default paragraph classes #}
+<div{{ attributes.addClass(classes)  }}>
+	
+	{# print the content without the styling fields #}
+		{% block widgetContent %}
+			{{ content|without('field_layout','field_background_style','field_background_image') }}
+		{% endblock %}
 
 </div>
+
