Add breadcrumbs, move widgets to new section, change default link color to be accessible, remove layout template that was breaking drag and drop

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -1,8 +1,8 @@
 /* base colors */
 $body       : #4d4e4e;
-$lightGrey : #ddd;
+$lightGrey : #ededed;
 $grey       : #ccc;
-$darkGrey  : #222222;
+$darkGrey  : #4a4a4a;
 $offWhite  : #f6f6f6;
 $white      : #fff;
 $black      : #000;
@@ -17,8 +17,7 @@ $imgOverlay      : rgba(35,35,35,0.4);
 
 
 /* Randos */
-$greenGood  : #218d00;
-$redBad     : #cd0210;
+$redWarning : #e80212;
 $unpub : #fff4fa;
 $unpubDark : #fdd5dd;
 
@@ -29,7 +28,7 @@ $borderRule: #222222;
 
 
 /* Link COLORS */
-$link        : #d52d00;
+$link        : #bf0e0e;
 $activeLink : #000000;
 $hoverLink  : #676767;
 
