--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
@@ -7,14 +7,14 @@
 	@include auto;
 	padding-left: 20px;
 	padding-right: 20px;
-	padding-top: 1em;
+	padding-bottom: 1em;
 	ol {
 		@include listReset;
 	}
 
 	li{
 		display: inline-block;
-		color: $grey;
+		color: $darkGrey;
 		@include xSmaller;
 		a{
 			padding-right: .25em;
